# RecognizeHandPosture

./: README.md
cpp_version/: CMakeLists.txt  example.cpp  main.cpp
cpp_version/include/: detect_hand.h  knn_classify.h
cpp_version/src/: detect_hand.cpp  fourier_descriptor.cpp  knn_classify.cpp
detect_hand/: detect.py
dev_ws/: CMakeLists.txt  main.cpp
dev_ws/include/: fourier_descriptor.h  knn_classify.h
dev_ws/src/: detect_hand.cpp  knn_classify.cpp
